--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TODO LIST</title>
+	<link href="./src/style/index.css" rel="stylesheet"/>
 </head>
 <body>
-	<div id="test">hello</div>
+	<div class="todo-app">
+		<header class="header">
+			<h1>todos</h1>
+			<input class="new-todo" placeholder="What needs to be done?" autofocus>
+		</header>
+		<section class="main">
+			<input class="toggle-all" type="checkbox"/>
+			<ul class="todo-list"></ul>
+		</section>
+		<footer>
+			<span class="todo-count"></span>
+				<ul class="filters">
+					<li>
+						<a href="#/" class="selected filter-all">All</a>
+					</li>
+					<li>
+						<a href="#/active" class="filter-active">Active</a>
+					</li>
+					<li>
+						<a href="#/completed" class="filter-completed">Completed</a>
+					</li>
+				</ul>
+				<button class="clear-completed">Clear completed</button>
+		</footer>
+	</div>
 	<script type="text/javascript" src="assets/bundle.js"></script>
 </body>
 </html>
